--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <strong>Ideal Job</strong>
             </h3>
             <p class="grey-text">Most people call this a 'Dream Journal' because good luck finding a job that matches all this criteria</p>
-            <a href="/idealJob.php" target="_blank" class="btn btn-primary btn-md"> Bethesda Recruiters, Click Here! <i class="fas fa-play ml-2"></i>
+            <a href="/idealJob.html" target="_blank" class="btn btn-primary btn-md"> Bethesda Recruiters, Click Here! <i class="fas fa-play ml-2"></i>
             </a>
           </div>
           <!--Grid column-->
@@ -190,7 +190,7 @@
             </h3>
             <p class="grey-text">On this page you'll find the results of a bunch of personality tests,
             so you can judge me on that if you want to.</p>
-            <a href="profile.php" target="_blank" class="btn btn-primary btn-md">Read More
+            <a href="profile.html" target="_blank" class="btn btn-primary btn-md">Read More
               <i class="fas fa-play ml-2"></i>
             </a>
           </div>
@@ -222,7 +222,7 @@
             </h3>
             <p class="grey-text">Here's a page which describes in minimal detail any personal projects that I may be working on.
             You know? Just in case you feel like stealing them.</p>
-            <a href="projects.php" target="_blank" class="btn btn-primary btn-md">Read More
+            <a href="projects.html" target="_blank" class="btn btn-primary btn-md">Read More
               <i class="fas fa-play ml-2"></i>
             </a>
           </div>
