--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <p>
               <strong>And also some less personal stuff, like some of my hobbies and miscellaneous facts about me.</strong>
             </p>
-            <a href="/personalInfo.html" target="_blank" class="btn btn-primary btn-md">Read More
+            <a href="https://burchera.github.io/s3769238/personalInfo.html" target="_blank" class="btn btn-primary btn-md">Read More
               <i class="fas fa-play ml-2"></i>
             </a>
           </div>
