--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="col-lg-5 col-xl-4 mb-4">
             <!--Featured image-->
             <div class="view overlay rounded z-depth-1-half">
-                  <image src="personalContent/personalImage.jpg"></image>
+                  <image src="https://burchera.github.io/s3769238/personalContent/personalImage.jpg"></image>
             </div>
           </div>
           <!--Grid column-->
@@ -130,7 +130,7 @@
               <strong>Interest in IT</strong>
             </h3>
             <p class="grey-text">Learn how he's not that great at image creation. As evidenced by the distinct lack of original header images here. </p>
-            <a href="/interest.html" target="_blank"  class="btn btn-primary btn-md">Read More
+            <a href="https://burchera.github.io/s3769238/interest.html" target="_blank"  class="btn btn-primary btn-md">Read More
               <i class="fas fa-play ml-2"></i>
             </a>
           </div>
@@ -148,7 +148,7 @@
           <div class="col-lg-5 col-xl-4 mb-4">
             <!--Featured image-->
             <div class="view overlay rounded z-depth-1">
-              <img src="/personalContent/jobImage.png" class="img-fluid" alt="">
+              <img src="https://burchera.github.io/s3769238/personalContent/jobImage.png" class="img-fluid" alt="">
             </div>
           </div>
           <!--Grid column-->
@@ -159,7 +159,7 @@
               <strong>Ideal Job</strong>
             </h3>
             <p class="grey-text">Most people call this a 'Dream Journal' because good luck finding a job that matches all this criteria</p>
-            <a href="/idealJob.html" target="_blank" class="btn btn-primary btn-md"> Bethesda Recruiters, Click Here! <i class="fas fa-play ml-2"></i>
+            <a href="https://burchera.github.io/s3769238/idealJob.html" target="_blank" class="btn btn-primary btn-md"> Bethesda Recruiters, Click Here! <i class="fas fa-play ml-2"></i>
             </a>
           </div>
           <!--Grid column-->
@@ -176,7 +176,7 @@
           <div class="col-lg-5 col-xl-4 mb-4">
             <!--Featured image-->
             <div class="view overlay rounded z-depth-1">
-              <img src="/personalContent/profileImage.png" class="img-fluid" alt="">
+              <img src="https://burchera.github.io/s3769238/personalContent/profileImage.png" class="img-fluid" alt="">
                 <div class="mask rgba-white-slight"></div>
               </a>
             </div>
@@ -190,7 +190,7 @@
             </h3>
             <p class="grey-text">On this page you'll find the results of a bunch of personality tests,
             so you can judge me on that if you want to.</p>
-            <a href="profile.html" target="_blank" class="btn btn-primary btn-md">Read More
+            <a href="https://burchera.github.io/s3769238/profile.html" target="_blank" class="btn btn-primary btn-md">Read More
               <i class="fas fa-play ml-2"></i>
             </a>
           </div>
@@ -208,7 +208,7 @@
           <div class="col-lg-5 col-xl-4 mb-4">
             <!--Featured image-->
             <div class="view overlay rounded z-depth-1">
-              <img src="/personalContent/projectImage.png" class="img-fluid" alt="">
+              <img src="https://burchera.github.io/s3769238/personalContent/projectImage.png" class="img-fluid" alt="">
                 <div class="mask rgba-white-slight"></div>
               </a>
             </div>
@@ -222,7 +222,7 @@
             </h3>
             <p class="grey-text">Here's a page which describes in minimal detail any personal projects that I may be working on.
             You know? Just in case you feel like stealing them.</p>
-            <a href="projects.html" target="_blank" class="btn btn-primary btn-md">Read More
+            <a href="https://burchera.github.io/s3769238/projects.html" target="_blank" class="btn btn-primary btn-md">Read More
               <i class="fas fa-play ml-2"></i>
             </a>
           </div>
