--- a/personalInfo.html
+++ b/personalInfo.html
@@ -45,7 +45,7 @@
         <div class="card-body text-black text-center py-5 px-5 my-5">
 
           <h1 class="mb-4">
-            <strong><a href="/index.html" target="_blank">Portfolio of Adam J Burcher</a></strong>
+            <strong><a href="https://burchera.github.io/s3769238/index.html" target="_blank">Portfolio of Adam J Burcher</a></strong>
           </h1>
           
           <p>
